feat: Add terraform_trivy security scanning hook
Add Trivy security scanner to pre-commit hooks for comprehensive
Terraform security scanning alongside tfsec.

Configuration:
- Scans all .tf files for security vulnerabilities
- Filters to CRITICAL and HIGH severity issues only
- Complements existing tfsec hook with additional detection patterns

Benefits:
- Enhanced security coverage with multiple scanning tools
- Automatic scanning on git commit
- Focuses on critical security issues

Reference: https://github.com/antonbabenko/pre-commit-terraform/tree/master#terraform_trivy

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -65,3 +65,9 @@ repos:
         name: Terraform Security Scan
         description: Static analysis security scanner for Terraform
         files: \.tf$
+      - id: terraform_trivy
+        name: Terraform Trivy Security Scan
+        description: Trivy security scanner for Terraform configurations
+        args:
+          - --args=--severity=CRITICAL,HIGH
+        files: \.tf$
